Fix styles for section__header-inner on tablet

--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -14,6 +14,7 @@
           @include tablet {
             display: flex;
             flex-direction: column;
+            align-items: start;
             row-gap: rem(30);
           }
 
